--- a/index.html
+++ b/index.html
@@ -1,3 +1,21 @@
-Hello World!
+<!doctype html><html lang="en">
 
-This site is under construction... Come back soon!
+<title>MichaelTawata.com</title>
+<style>
+  body { text-align: center; padding: 100px; }
+  h1 { font-size: 50px; }
+  body { font: 20px Helvetica, sans-serif; color: #333; }
+  article { display: block; text-align: left; width: 650px; margin: 0 auto; }
+  a { color: #dc8100; text-decoration: none; }
+  a:hover { color: #333; text-decoration: none; }
+</style>
+
+<article>
+    <h1>This site is under construction!</h1>
+    <div>
+        <p>Sorry for the inconvenience.  In the meantime, here's <a href=https://cloud.tawata.me/s/STNgNqX79qED2D3#pdfviewer>a link to my resume</a>!</p>
+        <p>&mdash; Michael</p>
+    </div>
+</article>
+  
+</html>
