--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <article>
     <h1>This site is under construction!</h1>
     <div>
-        <p>Sorry for the inconvenience.  In the meantime, here's <a href=https://cloud.tawata.me/s/STNgNqX79qED2D3#pdfviewer>a link to my resume</a>!</p>
+        <p>Sorry for the inconvenience.  In the meantime, here's <a href=https://cloud.tawata.me/s/XgbTYcssJJCoybK#pdfviewer>a link to my resume</a>!</p>
         <p>&mdash; Michael</p>
     </div>
 </article>
