--- a/test.html
+++ b/test.html
@@ -1,1 +1,1 @@
-<iframe src="https://docs.google.com/document/d/e/2PACX-1vTHnFcv39W0mNMk9P9xt2IPuiwAqvV5ngJQ3_XhlrlQyhN4LZbGz7V1wmS3q_Lphu_vpGMxjMwfyUHB/pub?embedded=true"></iframe>
+<iframe src="https://docs.google.com/document/d/e/2PACX-1vTHnFcv39W0mNMk9P9xt2IPuiwAqvV5ngJQ3_XhlrlQyhN4LZbGz7V1wmS3q_Lphu_vpGMxjMwfyUHB/pub?embedded=true"" onload='javascript:(function(o){o.style.height=o.contentWindow.document.body.scrollHeight+"px";}(this));' style="height:200px;width:100%;border:none;overflow:hidden;"></iframe>
