--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1>This site is under construction!</h1>
     <div>
       <p>Sorry for the inconvenience.  In the meantime, here's <a href=http://michaeltawata.com/resume>a link to my resume</a>!</p>
-      <p>And here's <a href=https://michaeltawata.com/portfolio>a link to my portfolio</p></a>.
+      <p>And here's <a href=https://michaeltawata.com/portfolio>a link to my portfolio</a>.</p>
       <p>&mdash; Michael</p>
     </div>
 </article>
